[package]
name = "rispc"
version = "0.1.0"
authors = ["Clark Gaebel <cg.wowus.cg@gmail.com>"]
license = "MIT"
repository    = "https://github.com/cgaebel/rispc"
homepage      = "https://github.com/cgaebel/rispc"
documentation = "https://cgaebel.github.io/rispc"
description = """
A build-time dependency for cargo build scripts to assist in invoking Intel's
ISPC compiler to compile a static archive to be linked into rust code.
"""
keywords = ["build-dependencies", "ispc", "spmd", "intel"]

[dependencies]
bindgen = "0.16.0"
gcc = "0.3"
