[package]
name = "rispcrt"
version = "0.1.0"
authors = ["Clark Gaebel <cg.wowus.cg@gmail.com>"]
build = "build.rs"
license = "MIT"
repository    = "https://github.com/cgaebel/rispc"
homepage      = "https://github.com/cgaebel/rispc"
documentation = "https://cgaebel.github.io/rispc"
description = """
A run-time dependency for packages using the rispc build-time dependency.
"""

[build-dependencies]
gcc = "0.3"
